after main merged, found minor issue. also add safety checks (#33)
* after main merged, found minor issue. also add safety checks

* added throws to the javadoc

* added log

* reversed the order to make it more readable

---------

Co-authored-by: Jonathan Phillips <jonathan.m.phillips2@gmail.com>